// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scope Event Names file: event-name-scoping-component.ts transformer 1`] = `
"import { Event, EventEmitter, Listen, RootComponent } from '@bearer/core';
@RootComponent({
    group: 'complex-feature',
    role: 'display'
})
export class FeatDisplayRootComponent {
    @Event({ eventName: \\"bearer-sponge-bob-global-mustbescopedevent\\" })
    mustBeScopedEvent: EventEmitter;
    @Event({ eventName: \\"bearer-sponge-bob-global-mustbescopedevent\\" })
    mustBeScopedEvent: EventEmitter;
    @Listen(\\"bearer-sponge-bob-config-saved\\")
    eventHandler() { }
    @Listen(\\"body:bearer-sponge-bob-eventfromanotherrootcomponent-saved\\")
    eventFromAnotherRootComponentHandler() { }
    @Listen(\\"body:bearer-sponge-bob-click\\")
    clickHandler() { }
}
"
`;

exports[`Scope Event Names file: simple-component.ts transformer 1`] = `
"import { Component, Event, EventEmitter, Listen } from '@bearer/core';
@Component({
    tag: 'event'
})
export class SimpleComponent {
    @Event({ eventName: \\"bearer-sponge-bob-global-mustbescopedevent\\" })
    mustBeScopedEvent: EventEmitter;
    @Listen(\\"bearer-sponge-bob-config-saved\\")
    eventHandler() { }
    @Listen(\\"bearer-sponge-bob-eventfromchildren\\")
    eventFromChildrenHandler() { }
    // prevent Alice to listen on anything else than her scenario's events
    @Listen(\\"body:bearer-sponge-bob-click\\")
    clickHandler() { }
}
"
`;
